removed redundant html tags

--- a/groups/templates/groups/expense.html
+++ b/groups/templates/groups/expense.html
@@ -12,15 +12,15 @@
                 <div class="form__item">
 
                     <div class="form__group">
-                        <label for="title"> Title</label>
+                        <label> Title</label>
                         {{form.title}}
                     </div>
                     <div class="form__group">
                         {{form.price}}
-                        <label for="price">Price</label>
+                        <label>Price</label>
                     </div>
                     <div class="form__group">
-                        <label for="date"> Date</label>
+                        <label> Date</label>
                         {{form.paid_date}}
                     </div>
                 </div>
@@ -43,7 +43,7 @@
                 </div>
                 <div class="form__item comment">
                     <div class="form__group comment__group">
-                        <label for="comment"> Comment</label>
+                        <label> Comment</label>
                         {{form.comment}}
                     </div>
                 </div>
