--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -552,3 +552,59 @@ textarea
    text-align: center;
    margin-bottom: 70px;
 }
+/* Welcome page */
+.welcome, .confirmation{
+   display: flex;
+   justify-content: center;
+   height: 100vh;
+   width: 100%;
+   background: #fff;
+}
+.welcome__wrapper{
+   max-width: 1200px;
+   display: flex;
+   justify-content: space-between;
+   padding: 40px;
+
+}
+.welcome__img{
+   background-position: center;
+   background-size: cover;
+   background-repeat: no-repeat;
+   width: 571px;
+   height: 567px;
+   margin-left: 25px;
+
+}
+.left{
+   width: 480px;
+   height: 600px;
+   align-items: center;
+   text-align: center;
+}
+.left h1{
+   font-weight: bold;
+   font-size: 72px;
+   line-height: 88px;
+   text-align: center;
+   color: #3846C8;
+}
+.left .custom__btn{
+   margin-top: 36px;
+   text-align: center;
+   line-height: 50px;
+}
+.confirmation{
+   background: #7B85E0;
+}
+.confirmation .welcome__img{
+   margin-right: 0;
+}
+.confirmation .left{
+   background: #fff;
+   padding:25px;
+   border-radius: 25px;
+   box-shadow: 4px 4px 8px rgba(56, 70, 200, 0.14);
+   max-height: 530px;
+
+}
