updated view of user registration

--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -30,7 +30,7 @@ li{
    margin-left: 90px;
    align-items: center;
 }
-.header__logo a, .form__title{
+.header__logo a, .form__title, .sign__up-title{
    font-size: 36px;
    line-height: 44px;
    text-align: center;
@@ -188,9 +188,7 @@ li{
    background:#EEEFFB;
 
 }
-.main .main__wrapper,
-.expence .main__wrapper,
-.settle__up .main__wrapper{
+.main__wrapper{
    display: flex;
    height:calc(100vh - 60px);
    background: #fff;
@@ -604,13 +602,19 @@ textarea
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
+   position: relative;
+}
+.settle__up-form .exit{
+   right: 5px;
+   top: 5px;
+   margin: 5px;
 }
 .settle__up-form .form__title{
    text-align: center;
    margin-bottom: 70px;
 }
 /* Welcome page */
-.welcome, .confirmation{
+.welcome, .confirmation, .sign__up{
    display: flex;
    justify-content: center;
    width: 100%;
@@ -656,7 +660,7 @@ textarea
    text-align: center;
    line-height: 50px;
 }
-.confirmation{
+.confirmation, .sign__up{
    background: #7B85E0;
 }
 .confirmation .welcome__img{
@@ -669,4 +673,98 @@ textarea
    box-shadow: 4px 4px 8px rgba(56, 70, 200, 0.14);
    max-height: 530px;
 
+}
+/* Sign Up Page */
+.sign__up{
+   justify-content: end;
+   margin: 0 auto;
+}
+.sign__up-title{
+   color: #fff;
+   font-size: 48px;
+   line-height: 59px;
+   text-align: center;
+   position: absolute;
+   letter-spacing: 1.5px;
+   left:-75%;
+   top: 15%;
+   -ms-transform: translateY(-10%);
+   transform: translateY(-10%);
+}
+.sign__up-right{
+   position: relative;
+   background: #fff;
+   border-radius: 70px 0px 0px 70px;
+   width: 800px;
+   height: 680px;
+   height:calc(100vh - 20px);
+   margin-top: 20px;
+   display: flex;
+   justify-content: end;
+}
+.sign__up-img{
+   width: 550px;
+   height: 430px;
+   z-index: 100;
+   position: absolute;
+   left: -55%;
+   top: 30% 
+}
+.sign__up-form{
+   position: absolute;
+   top: 10%;
+   max-width: 420px;
+   margin: 0 50px;
+   padding: 0 20px;
+}
+.sign__up-formTitle{
+   color: #7B85E0;
+   font-size: 48px;
+   line-height: 59px;
+   text-align: center;
+   margin: 0 auto;
+   padding-top: 25px;
+   width: 270px;
+}
+.text__container{
+   display: flex;
+   font-size: 24px;
+   line-height: 29px;
+   padding: 15px 5px;
+   margin-bottom: 30px;
+}
+.text__container p{
+   color: #000000;
+   margin: 0;
+   padding-right: 5px;
+}
+.text__container a{
+   display: block;
+   color: #7B85E0;
+   font-weight: 600;
+}
+.sign__up-form input{
+   display: block;
+   width: 100%;
+   outline: none;
+   border: none;
+   cursor: pointer;
+   background: transparent;
+   padding: 3px 10px;
+   margin-top: 20px;
+   text-align: start;
+   border-bottom: 2px solid #7B85E0;
+   color: #7B85E0;
+   font-size: 24px;
+   position: relative;
+}
+
+.sign__up-form input::placeholder{
+   color: #7B85E0;
+   font-size: 24px;
+   font-weight: 400;
+   letter-spacing: 1.5px;
+}
+.sign__up-form .custom__btn{
+   margin-top: 70px;
 }
