--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -1,12 +1,41 @@
-<h2>Sign Page</h2>
-<form method="post">
-    {% csrf_token %}
-    {% for field in form %}
-        <div>
-            {{field.label}}
-            {{field}}
-        </div>
-    {% endfor %}
-    <button type="submit">Register</button>
-    <br><br>
-</form>
+<!DOCTYPE html>
+{% load static %}
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'styles/main.css' %}">
+    <title>Slash</title>
+</head>
+<body>
+    <section class="sign__up">
+            <div class="sign__up-right">
+                <div class="sign__up-title">
+                    Slash
+                </div>
+                <div class="welcome__img sign__up-img" style="background-image: url({% static 'media/Payment.png' %});"></div>
+                <form method="POST" class="sign__up-form">
+                    {% csrf_token %}
+                    <div class="sign__up-formTitle">
+                        SIGN UP
+                    </div>
+                    <div class="text__container">
+                    <p>Already have an account?</p>
+                    <a href="{% url 'login-user' %}">Log In</a>
+                    </div>
+                        {{form.username}}
+                        {{form.email}}
+                        {{form.password1}}
+                        {{form.password2}}
+                    <button type="sumbit" class="custom__btn">Create account</button>
+                </form>
+
+            </div>
+
+    </section>
+</body>
+</html>
