--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,7 +1,48 @@
-<form method="POST" action="{% url 'login-user' %}">
+<!DOCTYPE html>
+{% load static %}
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'styles/main.css' %}">
+    <title>Slash</title>
+</head>
+<body>
+    <section class="sign__up login">
 
-    {% csrf_token %}
-    {{ form.as_p }}
 
-  <input type="submit" name="sumbit">
-</form>
+            <div class="sign__up-right">
+                <div class="sign__up-title ">
+                    Slash
+                </div>
+                <div class="welcome__img sign__up-img" style="background-image: url({% static 'media/Payment.png' %});"></div>
+                <form method="POST" class="sign__up-form">
+                    {% csrf_token %}
+                    <div class="sign__up-formTitle">
+                        LOG IN
+                    </div>
+                    <div class="text__container">
+                    <p>Dont have an account?</p>
+                    <a href="{% url 'register-user' %}">Sign Up</a>
+                    </div>
+                        {{form.username}}
+                        {{form.password}}
+                    <button type="submit" class="custom__btn">Log in</button>
+                </form>
+
+            </div>
+
+    </section>
+</body>
+</html>
+<!--<form method="POST" action="{% url 'login-user' %}">-->
+
+<!--    {% csrf_token %}-->
+<!--    {{ form.as_p }}-->
+
+<!--  <input type="submit" name="sumbit">-->
+<!--</form>-->
