transfer to create-group page when user doesn't have any groups

--- a/users/templates/users/welcome-page.html
+++ b/users/templates/users/welcome-page.html
@@ -16,7 +16,13 @@
         <div class="welcome__wrapper">
             <div class="left">
             <h1>Welcome to SLASH</h1>
-            <a href="{% url 'detail' group.id %}" class="custom__btn">Go to my groups</a>
+
+            {% if group %}
+                <a href="{% url 'detail' group.id %}" class="custom__btn">Go to my groups</a>
+            {% else %}
+                <a href="{% url 'create-group' %}" class="custom__btn">Go to my groups</a>
+            {% endif %}
+
             <a href="{% url 'create-group' %}" class="custom__btn">Create new group</a>
             </div>
         <div class="welcome__img" style="background-image: url({% static 'media/welcome.png' %});"></div>
