chnage groupS url to group

--- a/groups/templates/groups/group.html
+++ b/groups/templates/groups/group.html
@@ -45,8 +45,8 @@
                <div class="item__header">
                     <div class="item__header-title">{{group_data.name}}</div>
                     <div class="buttons__box">
-                        <button onclick="location.href='/groups/add-expense/'" type="button">Add EXP</button>
-                        <button onclick="location.href='/groups/settle-up/'" type="button">Settle Up</button>
+                        <button onclick="location.href='/group/add-expense/'" type="button">Add EXP</button>
+                        <button onclick="location.href='/group/settle-up/'" type="button">Settle Up</button>
                     </div>
                 </div>
                 <table class="main__table">
