new edit profile html view

--- a/users/templates/users/details.html
+++ b/users/templates/users/details.html
@@ -1,3 +1,47 @@
+{% extends 'main.html' %}
+{% load static %}
+{% block content %}
+
+<section class="editProfile">
+        <div class="main__wrapper">
+
+                <form action="" class="form">
+                    {% csrf_token %}
+                    <div class="left__content">
+                    <div class="form__title">Edit your profile</div>
+                    <div class="form__item">
+                        <div class="form__group">
+                            <label for="email">Email</label>
+                            <input type="text" id="email">
+                        </div>
+                        <div class="form__group">
+                            <input type="text" id="full_name">
+                            <label for="full_name">Name</label>
+                        </div>
+                    </div>
+                    <div class="form__item">
+                        <div class="form__group avatar">
+                          <label for="file-upload" class="custom__upload">
+                             Upload your avatar
+                          </label>
+                          <input id="file-upload" type="file"/>
+                        </div>
+
+                      </div>
+                    </div>
+                    <div class="right__content">
+                        <a class="custom-icon exit" href="{% url 'detail' group_id %}" style="background-image: url({% static 'media/x.svg' %});"></a>
+                        <div class="expence__img edit_exp" style="background-image: url({% static 'media/soc_media.png' %})"></div>
+                        <button class="custom__btn">Submit</button>
+                    </div>
+                </form>
+        </div>
+
+    </section>
+
+{% endblock %}
+
+
 <h2>Profile Page</h2>
 <form method="post">
     {% csrf_token %}
