--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -406,7 +406,7 @@ li{
 }
 /* expence section */
 
-.expence .main__wrapper, .settle__up .main__wrapper{
+.expence .main__wrapper, .settle__up .main__wrapper, .editProfile .main__wrapper{
    background:#EEEFFB;
    justify-content: center;
 }
@@ -419,6 +419,8 @@ li{
    display: flex;
    justify-content: space-between;
    max-height: 530px;
+   overflow: hidden;
+   height: fit-content;
 }
 .right__content{
    align-items: center;
@@ -766,7 +768,7 @@ textarea
    letter-spacing: 1.5px;
 }
 .sign__up-form .custom__btn{
-   margin-top: 80px;
+   margin-top: 70px;
 }
 .login{
    justify-content: start;
@@ -787,4 +789,115 @@ textarea
 }
 .login .text__container{
    margin-bottom: 150px;
+}
+/* Create group */
+.create__group{
+   margin: 0;
+   min-height: 100vh;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   background: #EEEFFB;
+
+}
+.create__group-container {
+   background: #fff;
+   box-shadow: 4px 4px 8px rgba(56, 70, 200, 0.14);
+   max-width: 95%;
+   width: 500px;
+
+}
+
+
+#close-window {
+   top: 13px;
+   right: 10px;
+}
+
+
+.createG-header {
+   background: #3846C8;
+   color: white;
+   padding: 15px;
+   position: relative;
+}
+
+h3 {
+   margin: 0;
+}
+
+.createG-content {
+   padding: 40px;
+   height: 100%;
+   align-items: center;
+   text-align: center;
+}
+
+.form-group {
+   margin-bottom: 20px;
+
+}
+
+.form-input {
+   width: 97%;
+   padding: 5px;
+   border: 2px solid #7B85E0;
+   border-radius: 25px;
+   display: block;
+   outline: none;
+}
+
+.text-input {
+   height: 50px;
+   width: 97%;
+   border: 2px solid #7B85E0;
+   border-radius: 25px;
+   padding: 5px;
+   outline: none;
+   resize: none;
+   overflow: auto;
+}
+
+.form-label {
+   color: #7B85E0;
+   display: block;
+   margin-bottom: 5px;
+   float: left;
+}
+.modal .custom__btn{
+   margin: 0 auto;
+   background: #7B85E0;
+}
+/* Profile card  */
+.editProfile .form__title{
+   margin-bottom: 25%;
+   text-transform: uppercase;
+   font-size: 32px;
+}
+input[type="file"] {
+   display: none;
+}
+.avatar .custom__upload{
+   background: #fff;
+   border: 2px solid #7B85E0;
+   border-radius: 25px;
+   color: #7B85E0;
+   padding: 0.5rem 0.3rem;
+   min-width: 100%;
+   padding-left: 40px;
+   position: relative;
+
+}
+.avatar .custom__upload::before{
+   content:'';
+   position: absolute;
+   left: 15px;
+   width: 30px;
+   height: 30px;
+   background-size: cover;
+   background-image: url(/static/media/upload-cloud.svg);
+   background-repeat: no-repeat;
+}
+.editProfile .form__item{
+   border-bottom: none;
 }
