pre fill user detail email and full name with instance

--- a/users/templates/users/details.html
+++ b/users/templates/users/details.html
@@ -12,10 +12,10 @@
                     <div class="form__item">
                         <div class="form__group">
                             <label for="email">Email</label>
-                            <input type="text" id="email">
+                            {{form.email}}
                         </div>
                         <div class="form__group">
-                            <input type="text" id="full_name">
+                            {{form.full_name}}
                             <label for="full_name">Name</label>
                         </div>
                     </div>
